Add initial configuration files, update models for nullable properties, and enhance views for OrderItems and Customer

--- a/WebApplication1/Views/OrderItems/Edit.cshtml
+++ b/WebApplication1/Views/OrderItems/Edit.cshtml
@@ -39,9 +39,9 @@
                 <span asp-validation-for="ExciseDuty" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="VAT" class="control-label"></label>
-                <input asp-for="VAT" class="form-control" />
-                <span asp-validation-for="VAT" class="text-danger"></span>
+                <label asp-for="Vat" class="control-label"></label>
+                <input asp-for="Vat" class="form-control" />
+                <span asp-validation-for="Vat" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
