--- a/WebApplication1/Views/OrderItems/Index.cshtml
+++ b/WebApplication1/Views/OrderItems/Index.cshtml
@@ -22,7 +22,7 @@
                 @Html.DisplayNameFor(model => model.ExciseDuty)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.VAT)
+                @Html.DisplayNameFor(model => model.Vat)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Order)
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.ExciseDuty)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.VAT)
+                @Html.DisplayFor(modelItem => item.Vat)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Order.OrderId)
